@@ -1,2 +1,2 @@
-discogs swans
-\(showing 1 - 20 of \d+
+discogs radiohead
+\(\d+ results\)
