@@ -1,6 +1,6 @@
 scroogle surfraw
-fast unix command line interface
+<a href="http://surfraw.alioth.debian.org/"><b>Surfraw</b>
 scroogle -nossl surfraw
-fast unix command line interface
+<a href="http://surfraw.alioth.debian.org/"><b>Surfraw</b>
 scroogle -lang=en surfraw
-fast unix command line interface
+<a href="http://surfraw.alioth.debian.org/"><b>Surfraw</b>
