@@ -1,2 +1,2 @@
 webster quotidian
-cotidian
+<div class="example-sentences"><h2><span>Examples of <em>QUOTIDIAN</em></span>
