@@ -1,3 +1,6 @@
+2011-02-09  Kyle Isom <coder@kyleisom.net>
+        * fix a number of tests to match current site formats
+
 2011-01-12  Kyle Isom  <coder@kyleisom.net>
 
 	* New elvi:
